--- a/clase-07-exc/main.css
+++ b/clase-07-exc/main.css
@@ -1,15 +1,43 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 16px;
-    background-color:rgb(202, 201, 201);
+    /* font-family: 'Courier New', Courier, monospace; */
+    /* font-size: 16px; */
+    /* background-color:rgb(202, 201, 201); */
 } 
 fieldset {
-    background-color: darkkhaki;
+    /* background-color: darkkhaki; */
 }
+input {
+    /* background-color: aquamarine; */
+    border: none;
+    
+}
+
+#rh-sangre {
+    border: none
+}
+
+form:last-child {
+    background-color:orange
+}
+
+/* PSEUDO CLASS */
+/* input::placeholder { */
+    /* color: blue; */
+}
+
+a {
+    /* color: brown; */
+}
+a:link
+a:hover
+a:visited
+
+
 h1 {
-    font-size: 4em;
+    /* font-size: 4em; */
 }
 
 p {
-    font-size: 2em;
+    /* font-size: 2em; */
 }
+
